@@ -1,7 +1,7 @@
 module HaveAPI
   module Extensions
     class Base
-      def self.enabled
+      def self.enabled(server)
 
       end
     end
